created new Layout files for all screens using fragments

--- a/app/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,15 +3,19 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_home_fragment"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Home" />
+        <item
+            android:id="@+id/nav_measure_pulse_fragment"
             android:icon="@drawable/ic_menu_camera"
             android:title="Puls messen" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_pulse_history"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Puls history" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_settings_fragment"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Settings" />
     </group>
